--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,3 +12,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Login Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: hub.bibomart.net
+          username: admin
+          password: Bbm@12345
